# Car-Quality-Evaluation

./: .dockerignore  .gitignore  Dockerfile  Readme.md  main.py  pyproject.toml  steps.md
data/: car_evaluation.csv
model/: RandomForest.pkl  car_class.pkl
