[build-system]
requires = ["setuptools"]


[project]
name = "carqualityevaluation"
version = "0.1.0"
description = "Deply Streamlit app to evaluate car quality"
authors = [{name = "veraz00", email="zenglinlin00@gmail.com"}]
readme = "Readme.md"
dependencies = [
  "streamlit==1.29.0",
  "pandas",
  "numpy",
  "altair",
  "scikit-learn",
]
requires-python = ">=3.8"


[project.optional-dependencies]
dev = ["black"]

# refer: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
